--- a/lang/en.json
+++ b/lang/en.json
@@ -2,12 +2,18 @@
   "imageretainer.cancel": "Cancel",
   "imageretainer.settings.systemOnly.title": "System Compendiums Only",
   "imageretainer.settings.systemOnly.description": "Only backup from or restore to system compendiums. Somewhat cleaner and safer.",
+  "imageretainer.settings.autoMapPath.title": "Auto-Map Path",
+  "imageretainer.settings.autoMapPath.description": "Path for the automapper function to search from. If using PDF to Foundry (for Pathfinder 2nd), you can set this to the same directory to map the tokens it generates.",
   "imageretainer.settings.ignoreSVG.title": "Ignore Foundry SVG Images",
   "imageretainer.settings.ignoreSVG.description": "Whether to ignore foundry's default SVGs when doing backups. If you want to check if the current system is using any external art, you may wish to turn this off.",
+  "imageretainer.settings.ignoreFoundry.title": "Ignore other Foundry Images",
+  "imageretainer.settings.ignoreFoundry.description": "Whether to ignore foundry's other images (non-SVG) when doing backups. If you want to check if the current system is using any external art, you may wish to turn this off.",
+  "imageretainer.restore.name": "Restore Image Paths",
   "imageretainer.restore.title": "Restore Image Paths?",
   "imageretainer.restore.description": "This will restore your custom images from backup. It may take a while.",
   "imageretainer.restore.newVersion": "A new game system version has been detected. Run restore? This may take a while. If you cancel, you can still run the restoration manually.",
   "imageretainer.restore.run": "Run Restore",
+  "imageretainer.backup.name": "Backup Image Paths",
   "imageretainer.backup.title": "Backup Image Paths?",
   "imageretainer.backup.description": "This will store your custom images so Image Retainer can restore them after you update your game system. It may take a while.",
   "imageretainer.backup.run": "Run Backup",
